pages/users/users.css
.st-hero {
  height: 60vh;
  background: url("../../assets/imgs-icons/Wave\ Background\ IMG.png") center
    center no-repeat;
  background-size: cover;
}

.hero-flex {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  transform: translateY(4rem);
}

.hero-imgs {
  display: flex;
  flex-shrink: 0;
  height: 110%;
}

.left-phone {
  transform: translateY(4rem);
}

.hero-text {
  max-width: 400px;
  margin: auto;
  padding-bottom: 4rem;
  padding-top: 2rem;
}

.hero-text p {
  margin: 10px 0 2rem 0;
  font-size: 14px;
}

.btn-flex {
  display: flex;
  gap: 10px;
}

.videos {
  color: var(--black-clr);
  margin-top: 15rem;
  margin-bottom: 4rem;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
  position: relative;
}

.videos.blurModel::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 5;
  background-color: rgba(255, 255, 255, 0.321);
  backdrop-filter: blur(5px);
}

.videos h1 {
  margin: 10px 0;
  line-height: 1.2;
  text-align: left;
}

.filter-flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: left;
}

.filter-flex p {
  max-width: 590px;
}

.filter {
  display: flex;
  gap: 1.5rem;
  border: 1px solid var(--black-clr);
  padding: 0.6rem 1.1rem;
  border-radius: 3px;
  cursor: pointer;
}

.filter span {
  font-size: 16px;
  font-family: inherit;
  letter-spacing: 2px;
}

.filter:hover {
  border: 1px solid var(--accent-clr);
}

.video {
  position: relative;
  width: fit-content;
  background-color: beige;
}

.video:hover {
  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.308);
}

.videos-grid {
  width: 100%;
  margin: 4rem auto;
  position: relative;
  display: grid;
  justify-content: center;
  place-items: center;
  grid-template-columns: repeat(auto-fill, minmax(auto, 220px));
  gap: 1rem;
}

.video.active {
  position: absolute;
  top: 5rem;
  left: 50%;
  transform: translateX(-50%);
  box-shadow: 0px 0px 7px 5px rgba(0, 0, 0, 0.227);
  z-index: 10;
  border-radius: 10px;
  max-width: 400px;
}

.active video {
  border-radius: 10px;
  width: 100%;
}

.video .play {
  position: absolute;
  width: 80px;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  cursor: pointer;
}

.video .close {
  position: absolute;
  top: -1.5rem;
  right: 0;
  width: 20px;
  display: none;
}

.active .close {
  display: block;
  cursor: pointer;
}

@media screen and (max-width: 900px) {
  .st-hero {
    height: 90vh;
  }
  .hero-flex {
    padding: 1rem;
    gap: 2rem;
    flex-direction: column-reverse;
  }

  .left-phone,
  .hero-flex {
    transform: translateY(0rem);
  }

  .hero-flex,
  .hero-imgs {
    height: auto;
  }

  .hero-text {
    padding-bottom: 0rem;
  }

  .hero-imgs img {
    max-width: 150px;
  }

  .btn-flex {
    flex-direction: column;
    text-align: center;
  }

  .videos {
    margin-top: 6rem;
  }

  .filter-flex {
    flex-direction: column;
    gap: 1rem;
    align-items: flex-start;
  }

  .video video {
    width: 160px;
  }

  .active video {
    width: 100%;
  }

  .videos-grid {
    padding: 1rem;
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media screen and (max-width: 600px) {
  .videos-grid {
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (max-height: 450px) {
  .videos {
    padding-top: 8rem;
  }

  .st-hero {
    height: 95vh;
  }
}

@media screen and (max-height: 650px) {
  .videos {
    margin-top: 12rem;
  }
}

